--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "history": "^5.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-music-visualizer": "^1.1.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "validator": "^13.7.0",
