--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
     "@chakra-ui/react": "^1.7.1",
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
+    "@react-three/drei": "^7.22.4",
+    "@react-three/fiber": "^7.0.19",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -14,11 +16,13 @@
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "history": "^5.1.0",
+    "lerp": "^1.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-music-visualizer": "^1.1.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "three": "^0.134.0",
     "validator": "^13.7.0",
     "web-vitals": "^1.0.1"
   },
