--- a/client/package.json
+++ b/client/package.json
@@ -13,16 +13,21 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
+    "color-interpolate": "^1.0.5",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "history": "^5.1.0",
     "lerp": "^1.0.3",
+    "midi-sounds-react": "^1.2.45",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-music-visualizer": "^1.1.0",
+    "react-piano-roll": "^0.1.3",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "reactronica": "^0.7.0",
     "three": "^0.134.0",
+    "tone": "^14.7.77",
     "validator": "^13.7.0",
     "web-vitals": "^1.0.1"
   },
