--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.7.1",
+    "@craco/craco": "^6.4.2",
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
     "@react-three/drei": "^7.22.4",
@@ -21,10 +22,12 @@
     "midi-sounds-react": "^1.2.45",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-music-visualizer": "^1.1.0",
     "react-piano-roll": "^0.1.3",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-virtualized": "^9.22.3",
     "reactronica": "^0.7.0",
     "three": "^0.134.0",
     "tone": "^14.7.77",
@@ -32,10 +35,10 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "set PORT=3000 && craco start",
+    "build": "set PORT=5000 && craco build",
+    "test": "cracos test",
+    "eject": "craco eject"
   },
   "proxy": "http://localhost:3001",
   "eslintConfig": {
