--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,12 @@
     "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.7.1",
     "@craco/craco": "^6.4.2",
+    "@devbookhq/splitter": "^1.2.4",
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
     "@react-three/drei": "^7.22.4",
     "@react-three/fiber": "^7.0.19",
+    "@scena/react-ruler": "^0.8.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -20,14 +22,17 @@
     "history": "^5.1.0",
     "lerp": "^1.0.3",
     "midi-sounds-react": "^1.2.45",
+    "rc-knob": "github:vallsv/rc-knob",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.4",
     "react-icons": "^4.3.1",
     "react-music-visualizer": "^1.1.0",
-    "react-piano-roll": "^0.1.3",
+    "react-resizable": "^3.0.4",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
-    "react-virtualized": "^9.22.3",
+    "react-virtualized-auto-sizer": "^1.0.6",
+    "react-window": "^1.8.6",
     "reactronica": "^0.7.0",
     "three": "^0.134.0",
     "tone": "^14.7.77",
@@ -58,5 +63,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-dial-knob": "^1.3.0"
   }
 }
