--- a/client/package.json
+++ b/client/package.json
@@ -21,13 +21,12 @@
     "framer-motion": "^4.1.17",
     "history": "^5.1.0",
     "lerp": "^1.0.3",
-    "midi-sounds-react": "^1.2.45",
     "rc-knob": "github:vallsv/rc-knob",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-draggable": "^4.4.4",
+    "react-ds": "^1.13.0",
     "react-icons": "^4.3.1",
-    "react-music-visualizer": "^1.1.0",
     "react-resizable": "^3.0.4",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
@@ -63,8 +62,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "react-dial-knob": "^1.3.0"
   }
 }
